add: 完成目前所有接口的swagger文档
