# app/Http/Controllers/Wechat/MiniProgramController.php
@@ -136,6 +136,113 @@ use Illuminate\Http\Request;
  *             ),
  *         ),
  *     ),
+ *
+ *     @SWG\Definition(
+ *         definition="StockDepth",
+ *         description="股票交易深度",
+ *         type="object",
+ *         @SWG\Property(
+ *             property="buy",
+ *             description="买单深度",
+ *             type="array",
+ *             @SWG\Items(
+ *                 type="array",
+ *                 example={"9.00000000", "2.00000000"},
+ *                 @SWG\Items(
+ *                     type="string",
+ *                     minItems=2,
+ *                     maxItems=2,
+ *                 ),
+ *             ),
+ *         ),
+ *         @SWG\Property(
+ *             property="sell",
+ *             description="卖单深度",
+ *             type="array",
+ *             @SWG\Items(
+ *                 type="array",
+ *                 example={"10.00000000", "2.00000000"},
+ *                 @SWG\Items(
+ *                     type="string",
+ *                     minItems=2,
+ *                     maxItems=2,
+ *                 ),
+ *             ),
+ *         ),
+ *     ),
+ *
+ *     @SWG\Definition(
+ *         definition="StockTicker",
+ *         description="Ticker",
+ *         type="object",
+ *         @SWG\Property(
+ *             property="stock_code",
+ *             description="股票代码",
+ *             type="string",
+ *             example="ABC12345",
+ *         ),
+ *         @SWG\Property(
+ *             property="price",
+ *             description="成交价格",
+ *             type="string",
+ *             example="3.00000000",
+ *         ),
+ *         @SWG\Property(
+ *             property="shares",
+ *             description="成交数量",
+ *             type="string",
+ *             example="4.00000000",
+ *         ),
+ *         @SWG\Property(
+ *             property="take_direction",
+ *             description="成交方向",
+ *             type="string",
+ *             example="sell",
+ *         ),
+ *         @SWG\Property(
+ *             property="created_at",
+ *             description="成交",
+ *             type="string",
+ *             example="2018-03-30 16:03:14",
+ *         ),
+ *     ),
+ *
+ *     @SWG\Definition(
+ *         definition="StockTrend",
+ *         description="股票涨跌幅变化",
+ *         type="object",
+ *         @SWG\Property(
+ *             property="{stock_code}",
+ *             description="此只股票的趋势",
+ *             type="object",
+ *             @SWG\Property(
+ *                 property="changing_rate",
+ *                 description="涨跌幅",
+ *                 type="string",
+ *                 example="-0.2500",
+ *             ),
+ *             @SWG\Property(
+ *                 property="last_price",
+ *                 description="最新成交价(可能最近的成交在3天之前)",
+ *                 type="string",
+ *                 example="3.00000000",
+ *             ),
+ *             @SWG\Property(
+ *                 property="today_last_price",
+ *                 description="进入最新成交价(无则为0)",
+ *                 type="string",
+ *                 example="3.00000000",
+ *             ),
+ *             @SWG\Property(
+ *                 property="owner",
+ *                 description="此只股票的所有者",
+ *                 type="object",
+ *                 allOf={
+ *                     @SWG\Schema(ref="#/definitions/Player"),
+ *                 },
+ *             ),
+ *         ),
+ *     ),
  * )
  */
 class MiniProgramController extends Controller
