# routes/api.php
@@ -35,9 +35,9 @@ Route::group([
     Route::get('stock/ipo', 'StockIpoController@getIpoInfo');
     Route::post('stock/ipo/subscription', 'StockIpoController@subscription');
     Route::post('stock/order', 'StockTradingController@makeOrder');
-    Route::delete('stock/order/{order}', 'StockOrderController@cancelOrder');
     Route::get('stock/order/{orderId}', 'StockOrderController@getOrder')->where('orderId', '[0-9]+');
-    Route::get('stock/orders', 'StockOrderController@getPlayerOrders'); //获取当前玩家的订单
+    Route::delete('stock/order/{order}', 'StockOrderController@cancelOrder');
+    Route::get('stock/orders', 'StockOrderController@getPlayerOrders'); //批量获取当前玩家的订单
     Route::get('stock/orders/history', 'StockOrderController@getOrderHistory');  //获取某只股票的订单历史
     Route::get('stock/depth', 'StockMarketController@getDepth'); //获取某只股票的交易深度
     Route::get('stock/ticker', 'StockMarketController@getTicker');  //获取某只股票的最近成交价
